# rascal

./: Cargo.toml  HANDOFF.rascal.yaml  README.md
src/: chunker.rs  config.rs  corpus.rs  domain.rs  embedder.rs  lib.rs  main.rs  output.rs  scorer.rs
tests/: chunker_test.rs
tests/fixtures/: sample.rs
