[package]
name = "rascal"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rascal"
path = "src/main.rs"

[lib]
name = "rascal"
path = "src/lib.rs"

[dependencies]
comfy-table = "7.2.2"
dirs-next = "2.0.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sqlite-vec = "0.1.9"
thiserror = "2"
toml = "1.1.2"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"

[dev-dependencies]
tempfile = "3.27.0"
